# Configuration file for creating the package.
#   - standard metadata
#   - dynamic version number
#   - command line script
#   - package data
#
# Thomas Guillod - Dartmouth College
# Mozilla Public License Version 2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>68.2",
    "wheel>0.41",
    "setuptools_scm>7.1",
]

[tool.setuptools_scm]
write_to = "pypeec/data/version.txt"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "pypeec"
description = "PyPEEC - 3D Quasi-Magnetostatic Solver"
license = {text = "MPL-2.0"}
authors = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
maintainers = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
keywords = [
    "PyPEEC",
    "FFT",
    "PEEC",
    "3D",
    "voxel",
    "conductor",
    "electric",
    "magnetic",
    "field simulation",
    "maxwell equations",
    "frequency domain",
    "power electronics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Environment :: Console",
]

dependencies = [
    "scilogger >= 1.2.2",
    "scisave >= 1.4.1",
    "jsonschema >= 4.23.0",
    "joblib >= 1.3.0",
    "numpy >= 1.24.0",
    "scipy >= 1.12.0",
    "matplotlib >= 3.7.0",
    "shapely >= 2.0.0",
    "rasterio >= 1.3.0",
    "Pillow >= 10.0.0",
    "vtk >= 9.2.0",
    "pyvista >= 0.40.0",
    "pyvistaqt >= 0.11.0",
    "PyQt5 >= 5.15.0",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://pypeec.otvam.ch"
Repository = "https://github.com/otvam/pypeec"
Releases = "https://github.com/otvam/pypeec/releases"
Issues = "https://github.com/otvam/pypeec/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
pypeec = "pypeec:run_script"

[tool.setuptools]
packages = [
    "pypeec",
    "pypeec.lib_mesher",
    "pypeec.lib_solver",
    "pypeec.lib_plot",
    "pypeec.lib_check",
    "pypeec.lib_matrix",
    "pypeec.run",
    "pypeec.utils",
    "pypeec.data",
]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.package-data]
pypeec = [
    "data/*.png",
    "data/*.txt",
    "data/*.yaml",
    "data/*.zip",
]
