# Configuration file for defining the package data.
#
# WARNING: Only the required packages are listed as the package dependencies.
#          The following optional libraries are not installed:
#              - FFTW, UMFPACK, and MKL/PARDISO
#              - CuPy and CUDA
#              - Jupyter and Trame
#
# (c) Thomas Guillod - Dartmouth College

[metadata]
name = pypeec
description = PyPEEC - 3D PEEC Solve
license = All rights reserved
author = Thomas Guillod
author_email = guillod@otvam.ch
url = https://github.com/otvam/PyPEEC
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    PyPEEC
    FFT
    PEEC
    3D
    voxel
    conductor
    electric
    magnetic
    field simulation
    maxwell equations
    frequency domain
    power electronics
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages =
    pypeec
    pypeec.lib_mesher
    pypeec.lib_solver
    pypeec.lib_visualization
    pypeec.lib_check
    pypeec.lib_matrix
    pypeec.lib_utils
python_requires = >=3.8
install_requires =
    PyYAML >= 6.0
    numpy >= 1.24
    scipy >= 1.9
    matplotlib >= 3.6
    Pillow >= 9.4
    vtk >= 9.2
    pyvista >= 0.38
    pyvistaqt >= 0.9
    QtPy >= 2.3
    PySide2 >= 5.15

[options.package_data]
* = *.png, *.yaml

[options.entry_points]
console_scripts =
    pypeec = pypeec.script:run_script
